--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,51 @@ body{
     font-size: 13px;
     
 }
+.course-card {
+    background-color: #f8f6f1;
+    border-radius: 10px;
+    padding: 20px;
+    width: 300px;
+    margin: 20px auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color:"#565656"
+
+  }
+  
+  .course-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  
+ 
+  
+  .start-test {
+    background-color: #D7C5A8;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    color:#565656;
+    border-radius: 80;
+  }
+  
+  .course-certification {
+    background-color: #e3f8d7;
+    padding: 10px;
+    border-radius: 5px;
+   
+    text-align: center;
+  }
+  
+  .course-details {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .course-questions, .course-recommendations {
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  
