--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: row;
     margin: 5%;
+    height: max-content;
 }
 .program-left{
     flex: 0 0 15%;
@@ -13,9 +14,10 @@
     padding: 2%;
     align-items: flex-start;
     justify-content: center;
-    background-color: black;
+    background-color: rgb(26, 26, 26);
     border-top-left-radius: 40px;
     border-bottom-left-radius: 40px;
+
 }
 .program-sub{
     display: flex;
@@ -25,7 +27,7 @@
 }
 .program-right{
     display: flex;
-    background-color: beige;
+    background-color: #F1F3F6;
     flex-direction: column;
     color: black;
     gap: 1%;
@@ -50,7 +52,8 @@
     font-family: 'Courier New', Courier, monospace; /* Monospace font for the code */
     font-size: 14px; /* Font size */
     overflow: auto; /* Scroll if content overflows */
-    height: 300px; /* Height of the console area */
+    height: 400px;
+    margin:0% 2%; /* Height of the console area */
 }
 
 .program-right-console::before {
@@ -81,5 +84,6 @@
     font-family: 'Courier New', Courier, monospace; /* Monospace font for the code */
     font-size: 14px; /* Font size */
     overflow: auto; /* Scroll if content overflows */
-    height: 300px; /* Height of the console area */
+    height: 400px;
+    margin:0% 2% 0% 0%;  /* Height of the console area */
 }
